# Romanesco

./: .gitattribute  .gitmodules  CMakeLists.txt  README.md  Romanesco.pro  Ti112586.eps.REMOVED.git-id  ToDO  gui_todo.txt  mainwindow.o.REMOVED.git-id  moc_mainwindow.o.REMOVED.git-id  moc_openglwindow.cpp  moc_openglwindow.o.REMOVED.git-id  openglwindow.o.REMOVED.git-id  raymarch.frag  raymarch.vert  romanesco.REMOVED.git-id  romanesco.pro  romanesco_TEST.REMOVED.git-id  shaderwindow.cpp  shaderwindow.h  shaderwindow.o.REMOVED.git-id  space_cubemap.png.REMOVED.git-id  trap.zip.REMOVED.git-id
QtTest/: add_sdfop.fish  out.ppm.REMOVED.git-id
QtTest/include/: optixscene.h  optixscene.h.autosave  runtimecompiler.h
QtTest/kernel/: draw.cu  functor.cu  julia.cu  pinhole_camera.cu  raymarch.cu  raymarch_shader.cu
QtTest/moc/: moc_mainwindow.cpp  moc_openglwindow.cpp  moc_qnodeseditor.cpp
QtTest/nvrtc/: test.cu
QtTest/shaders/: raymarch.vert  viewport.frag  viewport.vert
QtTest/src/: main.cpp  openglwindow.cpp  optixscene.cpp  rendermath.cpp  runtimecompiler.cpp  shaderwindow.cpp
Romanesco_Src/: NewLighting.exr.REMOVED.git-id  OldLighting.exr.REMOVED.git-id  README.md  Romanesco_Src.zip.REMOVED.git-id  ToDO  batchRender.fish  batchRender.sh  batchRenderEnv.sh  darkthemeRomanesco.sh  gui_todo.txt  kyranbulb2.exr.REMOVED.git-id  pythonparsetest.py  quickbatch.fish  quickrender.sh  romanesco.REMOVED.git-id  romanesco.debug.REMOVED.git-id  romanesco.pro  romanesco.qrc  romanesco_TEST.REMOVED.git-id  romanesco_TEST.debug.REMOVED.git-id  sdfop_list.txt  test_0000.exr.REMOVED.git-id  test_0001.exr.REMOVED.git-id  test_0002.exr.REMOVED.git-id  test_0003.exr.REMOVED.git-id  test_0004.exr.REMOVED.git-id  test_0005.exr.REMOVED.git-id  test_0006.exr.REMOVED.git-id  test_0007.exr.REMOVED.git-id  test_0008.exr.REMOVED.git-id  test_0009.exr.REMOVED.git-id  test_0010.exr.REMOVED.git-id  test_0011.exr.REMOVED.git-id  test_0012.exr.REMOVED.git-id  test_0013.exr.REMOVED.git-id  test_0014.exr.REMOVED.git-id  test_0015.exr.REMOVED.git-id  test_0016.exr.REMOVED.git-id  test_0017.exr.REMOVED.git-id  test_0018.exr.REMOVED.git-id  (+42 more)
Romanesco_Src/include/: optixscene.h  optixsceneadaptive.h  runtimecompiler.h  shaderwindow.h
Romanesco_Src/kernel/: DistanceFieldAdvancedPrimitives.h  DistanceFieldMaths.h  DistanceFieldPrimitives.h  DistanceFieldTraps.h  DistanceFieldUtils.h  GLSL_Functions.h  a.out.REMOVED.git-id  block_floor.cu  constantbg.cu  cutil_matrix.h  globals.h  julia.cu  menger.cu  raymarch.cu  raymarch_geo.cu  romanescocore.h  romanescomath.h  test.cu  tmp.cu  tmp.ptx.REMOVED.git-id
Romanesco_Src/ptx/: block_floor.cu.ptx.REMOVED.git-id  julia.cu.ptx.REMOVED.git-id  menger.cu.ptx.REMOVED.git-id
Romanesco_Src/scenes/: default.cu  deformtest.cu  demo.cu  fra_sh_010.cu  fra_sh_020.cu  fra_sh_030.cu  fra_sh_050.cu  fra_sh_060.cu  fra_sh_070.cu  spc_sh_070.cu  test.cu  tunneltest.h
Romanesco_Src/shaders/: raymarch.frag  viewport.vert
Romanesco_Src/src/: main.cpp  optixscene.cpp  optixsceneadaptive.cpp  pinholecamera.cpp  runtimecompiler.cpp
Romanesco_Src/stats/: activity.html  authors.html  files.html  gitstats.cache  lines.html  lines_of_code_by_author.plot
Romanesco_Src/styles/: romanesco.qss
cmake/: FindCuda.cmake  FindOpenEXR.cmake  FindOptix.cmake
doc/: TomMinor_Report.pdf.REMOVED.git-id  backend=biber.blg  report.aux  report.bbl  report.bcf.REMOVED.git-id  report.out  report.run.xml  report.synctex.gz.REMOVED.git-id  report.tex  tc-pgf.def
doc/images/: contactsheet.png.REMOVED.git-id  (+9 more)
include/: openglwindow.h  rendermath.h  shaderwindow.h
kernel/: DistanceFieldAdvancedPrimitives.h  DistanceFieldPrimitives.h  SDFIFSContact.h  SDFJulia.h  SDFMandelbulb.h  SDFMenger.h  cutil_math.h  path_tracer.h  romanescocore.h  romanescomath.h
ptx/: block_floor.cu.ptx  constantbg.cu.ptx  draw.cu.ptx  functor.cu.ptx  menger.cu.ptx  parallelogram.cu.ptx  pinhole_camera.cu.ptx  raymarchtest.cu.ptx  sphere.cu.ptx  tmp.cu.ptx
report/: bib_icereport.bib  graph.pdf_tex  nodegrammar.png.REMOVED.git-id  report.aux  report.bbl  report.bcf.REMOVED.git-id  report.out  report.pdf.REMOVED.git-id  report.run.xml  report.synctex.gz.REMOVED.git-id  report.tex
scenes/: default.cu  fra_sh_010.cu  fra_sh_040.cu  fra_sh_070.cu  spc_sh_070.cu  spc_sh_070_c.cu  tunneltest.h
shaders/: raymarch.frag  raymarch.vert  viewport.frag  viewport.vert
src/: CMakeLists.txt  main.cpp  openglwindow.cpp  optixresources.h.in  shaderwindow.cpp
src/Core/: BaseScene.cpp  BaseScene.h  ImageWriter.cpp  NodeParser.cpp  NodeParser.h  OptixScene.cpp  OptixSceneAdaptive.cpp  PinholeCamera.cpp  PinholeCamera.h  RenderMath.h  RuntimeCompiler.cpp  ViewportWindow.cpp  command.cpp  inputhandler.cpp  rendercontext.cpp  stringutilities.cpp
src/GUI/: QColorRampEditor.h  highlighter.cpp  mainwindow.cpp  mainwindow.h  qframebuffer.cpp  qframebuffer.h  qrenderwindow.cpp  qtimelineanimated.h  qtimelinewidget.cpp  testglwidget.cpp  testglwidget.h
src/GUI/QNENodes/: qneblock.h  qneconnection.h  qneport.h
src/GUI/nodes/: distanceopnode.cpp  terminatenode.cpp
src/Optix/: OptixPinholeCamera.h  OptixScene.cpp  OptixScene.h
src/Optix/sutil/: ImageLoader.h
src/SDFOps/: Base_SDFOP.cpp  Base_SDFOP.h
src/SDFOps/DistDeformer/: Blend_SDFOP.cpp  Displace_SDFOP.cpp
src/SDFOps/DistOp/: DistOpInterface_SDFOP.cpp  Intersection_SDFOP.cpp  Subtraction_SDFOP.cpp  Union_SDFOP.cpp
src/SDFOps/DomainDeformer/: Bend_SDFOP.cpp  Twist_SDFOP.cpp
src/SDFOps/DomainOp/: Repetition_SDFOP.cpp  Repetition_SDFOP.h  Scale_SDFOP.cpp  Transform_SDFOP.cpp
src/SDFOps/Primitive/: Box_SDFOP.cpp  Capsule_SDFOP.cpp  Capsule_SDFOP.h  Cone_SDFOP.cpp  Cylinder_SDFOP.cpp  Mandelbulb_SDFOP.cpp  Menger_SDFOP.cpp  Sphere_SDFOP.cpp  Torus_SDFOP.cpp
src/kernel/: GLSL_Functions.h  cutil_math.h  menger.cu  path_tracer.h  pinhole_camera.cu  romanescomath.h
src/scenes/: fra_sh_030_env.cu
src/shaders/: viewport.frag
stats/: commits_by_author.plot  index.html  tags.html
styles/: romanesco.qss
utils/: batchRender.sh  batchRenderEnv.fish  pythonparsetest.py
(+208 files in other folders)
